合併資料庫為一個

--- a/prjCramSchoolSystem/appsettings.json
+++ b/prjCramSchoolSystem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-prjCramSchoolSystem-FB025DAD-29A7-400F-B12A-E6DE9C8B6FD3;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Data Source=.;Initial Catalog=CramSchoolDB;Integrated Security=True",
     "CramSchoolDB": "Data Source=.;Initial Catalog=CramSchoolDB;Integrated Security=True"
   },
   "Logging": {
