--- a/prjCramSchoolSystem/prjCramSchoolSystem.csproj
+++ b/prjCramSchoolSystem/prjCramSchoolSystem.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Areas\Identity\Pages\Account\ParentRegister.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <_ContentIncludedByDefault Remove="wwwroot\css\barfiller.css" />
     <_ContentIncludedByDefault Remove="wwwroot\css\bootstrap.min.css" />
     <_ContentIncludedByDefault Remove="wwwroot\css\elegant-icons.css" />
@@ -153,6 +157,7 @@
     <None Include="Areas\Identity\Pages\Account\Manage\_ManageNav.cshtml" />
     <None Include="Areas\Identity\Pages\Account\Manage\_StatusMessage.cshtml" />
     <None Include="Areas\Identity\Pages\Account\Manage\_ViewImports.cshtml" />
+    <None Include="Areas\Identity\Pages\Account\ParentRegister.cshtml" />
     <None Include="Areas\Identity\Pages\Account\Register.cshtml" />
     <None Include="Areas\Identity\Pages\Account\RegisterConfirmation.cshtml" />
     <None Include="Areas\Identity\Pages\Account\ResendEmailConfirmation.cshtml" />
